# sdk-rust

./: .gitignore  Apis.md  Cargo.toml  Models.md  README.md
auth/: Cargo.toml  README.md
auth/.openapi-generator/: FILES
auth/docs/: HealthApi.md  HealthInfo.md  IssueKeyRequest.md  Key.md  KeysApi.md
bootstrap/: Cargo.toml  README.md
bootstrap/.openapi-generator/: FILES
bootstrap/docs/: BootstrapConfig.md  Config.md  ConfigChannelsInner.md  ConfigList.md  ConfigUpdateCerts.md  ConfigsApi.md  CreateConfigRequest.md  HealthApi.md  State.md  UpdateConfigCertsRequest.md  UpdateConfigConnectionsRequest.md  UpdateConfigRequest.md  UpdateConfigStateRequest.md
certs/: Cargo.toml  README.md
certs/.openapi-generator/: FILES
certs/docs/: Cert.md  CertsApi.md  CertsPage.md  CreateCertRequest.md  HealthApi.md  Revoke.md  Serial.md  SerialsPage.md
channels/: Cargo.toml  README.md
channels/.openapi-generator/: FILES
channels/docs/: Channel.md  ChannelConnectionReqSchema.md  ChannelReqObj.md  ChannelUpdate.md  ChannelUpdateTags.md  ChannelsApi.md  ChannelsPage.md  ConnectionReqSchema.md  ConnectionsApi.md  HealthApi.md
channels/src/apis/: channels_api.rs  configuration.rs  connections_api.rs  health_api.rs  mod.rs
channels/src/models/: channel.rs  channel_connection_req_schema.rs  channel_req_obj.rs  channel_update.rs  channel_update_tags.rs  channels_page.rs  connection_req_schema.rs  error.rs  health_res.rs  mod.rs  parent_group_req_obj.rs
clients/: Cargo.toml  README.md
clients/.openapi-generator/: FILES
clients/docs/: AvailableActionsObj.md  Client.md  ClientCredentials.md  ClientReqObj.md  ClientReqObjCredentials.md  ClientSecret.md  ClientTags.md  ClientUpdate.md  ClientWithEmptySecret.md  ClientWithEmptySecretCredentials.md  ClientsApi.md  ClientsPage.md  HealthApi.md  ParentGroupReqObj.md  RoleMembersObj.md  RolesApi.md  RolesPage.md
domains/: Cargo.toml  README.md
domains/.openapi-generator/: FILES
domains/docs/: Domain.md  DomainReqObj.md  DomainUpdate.md  DomainsApi.md  DomainsPage.md  HealthApi.md  Role.md  RoleActionsObj.md  RolesApi.md  UpdateRoleObj.md
examples/: Cargo.toml
examples/src/: lib.rs  main.rs
groups/: Cargo.toml  README.md
groups/.openapi-generator/: FILES
groups/docs/: ChildrenGroupReqObj.md  CreateRoleObj.md  GroupReqObj.md  GroupsApi.md  GroupsHierarchyPage.md  HealthApi.md  HealthRes.md  NewRole.md  ParentGroupReqObj.md  RolesApi.md
http/: Cargo.toml  README.md
http/.openapi-generator/: FILES
http/docs/: HealthApi.md  MessagesApi.md  SenMlRecord.md
invitations/: Cargo.toml  README.md
invitations/.openapi-generator/: FILES
invitations/docs/: AcceptInvitationRequest.md  HealthApi.md  Invitation.md  InvitationPage.md  InvitationsApi.md  SendInvitationReqObj.md
journal/: Cargo.toml  README.md
journal/.openapi-generator/: FILES
journal/docs/: HealthApi.md  Journal.md  JournalLogApi.md  JournalPage.md
notifiers/: Cargo.toml  README.md
notifiers/.openapi-generator/: FILES
notifiers/docs/: CreateSubscription.md  HealthApi.md  NotifiersApi.md  Page.md  Subscription.md
provision/: Cargo.toml  README.md
provision/.openapi-generator/: FILES
provision/docs/: DomainIdMappingPostRequest.md  HealthApi.md  ProvisionApi.md
provision/src/apis/: configuration.rs  health_api.rs  mod.rs  provision_api.rs
provision/src/models/: __domain_id__mapping_post_request.rs  health_info.rs  mod.rs
readers/: Cargo.toml  README.md
readers/.openapi-generator/: FILES
readers/docs/: HealthApi.md  MessagesPage.md  MessagesPageMessagesInner.md  ReadersApi.md
readers/src/apis/: configuration.rs  health_api.rs  mod.rs  readers_api.rs
readers/src/models/: health_info.rs  messages_page.rs  messages_page_messages_inner.rs  mod.rs
src/: main.rs
src/apis/: certs_api.rs  channels_api.rs  clients_api.rs  configuration.rs  domains_api.rs  examples.rs  groups_api.rs  invitations_api.rs  journal_log_api.rs  keys_api.rs  messages_api.rs  mod.rs  notifiers_api.rs  provision_api.rs  readers_api.rs  states_api.rs  twins_api.rs  users_api.rs
src/models/: __domain_id__mapping_post_request.rs  accept_invitation_request.rs  assign_req_obj.rs  assign_user_req_obj.rs  attribute.rs  available_actions_obj.rs  cert.rs  certs_page.rs  channel.rs  channel_connection_req_schema.rs  channel_req_obj.rs  channel_update.rs  channel_update_tags.rs  email.rs  (+83 more)
twins/: Cargo.toml  README.md
twins/.openapi-generator/: FILES
twins/docs/: Attribute.md  Definition.md  HealthApi.md  State.md  StatesApi.md  StatesPage.md  TwinReqObj.md  TwinResObj.md  TwinsApi.md  TwinsPage.md
twins/src/apis/: configuration.rs  health_api.rs  mod.rs  states_api.rs  twins_api.rs
twins/src/models/: attribute.rs  definition.rs  health_info.rs  mod.rs  state.rs  states_page.rs  twin_req_obj.rs  twin_res_obj.rs  twins_page.rs
users/: Cargo.toml  README.md
(+242 files in other folders)
